fix: fix theme style bundle

--- a/src/theme/common.scss
+++ b/src/theme/common.scss
@@ -1,35 +1,1 @@
-//字体
-$font-family-base:Microsoft YaHei; //基础字体
-$font-size-large:24px;
-$font-size-base:14px; //基础字号
-$font-size-mini:12px;
-
-//主盒
-$z-index:999; //默认
-
-//提示状态颜色
-$success: #00cc00;
-$error: red;
-$info: #409eff;
-$before: #409eff;
-
-//bug
-$bug-type-1:red;
-$bug-type-2:orange;
-$bug-type-3:#3399ff;
-$bug-type-4:#00cc00;
-
-//文本溢出
-@mixin overflow-text($line) {
-    overflow: hidden;
-    text-overflow: ellipsis;
-    display: -webkit-box;
-    -webkit-line-clamp: $line;
-    -webkit-box-orient: vertical;
-}
-
-@mixin light-font {
-    font-size: $font-size-mini;
-    color: $font-color-light;
-}
-
+$size:100px;
