--- a/src/theme/default.scss
+++ b/src/theme/default.scss
@@ -1,51 +1,1 @@
-$base-green:#a6d669;
-$base-blue:#58c8f2;
-$base-yellow:#f8d348;
-$base-red:#ff6d61;
-
-
-//背景
-$bg-gray:#F2F2F3; //灰色背景
-$bg-base:white; //白色背景
-$bg-btn:#1ED2E3; //按钮背景
-$bg-msg:#FC2D2D; //消息背景
-$pop-bg:rgba(0, 0, 0, .6); //弹窗背景
-$bg-nav-light-blue:#EEF2F8; //左侧菜单背景色
-
-$bg-base-light:#f1f2f7;
-$bg-base-alpha:rgba(102,102,102,.1);
-
-$bg-menu-dark:#2a3542;
-$bg-menu-light:#35404d;
-
-$color-act:#347BFC; //行为颜色
-//边框
-$border-color-light:#f5f5f5;
-
-$btn-color-primary:#326CFC;
-$btn-color-primary-hover:#4278FF;
-
-$btn-color-cancel:#FFFFFF;
-$btn-color-cancel-hover:#E5E8EF;
-
-$button-plain-color: #409eff;
-$button-plain-background: #ecf5ff;
-$button-plain-border-color: #b3d8ff;
-
-
-$table-bg-odd:#EEF2F8;
-$table-bg-even:white;
-$table-bg-stripe:#FAFAFA;
-
-
-$box-shadow-light:rgba(167,188,209,0.22);
-$box-shadow-dark:rgba(0,0,0,0.4);
-
-$rancher-green: #87e3ae;
-$rancher-green-bg: #daf6e6;
-
-$font-color-base:black;
-$font-color-normal:#5d5c5a;
-$font-color-light:#c6cad6;
-$font-color-blue:#46aadc;
-$font-color-msg:red;
+$bg-color:red;
